# CodeWizards

./: .gitmodules  LICENSE  analyze.sh  asan.sh  auto_kill_process.py  check.sh  coverage.sh  kcov.sh  local-runner.mult_run_test.properties  local-runner.properties  local-runner.properties.tmpl  msan.sh  mult_run_test.py  mult_run_test_stats.py  profile_stats.py  release.sh  repeat.py  repeat.sh  repeater.sh  run.py  run.sh  strategy.py  test_run.sh  ubsan.sh  verbose_stats.py
cpp-cgdk/: CMakeLists.txt  MyStrategy.cpp  MyStrategy.h  RemoteProcessClient.cpp  RemoteProcessClient.h  Runner.cpp  Runner.h  Strategy.cpp  Strategy.h  abstract_strategy.hpp  action.cpp  action.hpp  altmov.cpp  altmov.hpp  base_strategy.cpp  base_strategy.hpp  battle_mode.cpp  battle_mode.hpp  bobyqa.cpp  bobyqa.h  bobyqb.hpp  cache.hpp  circle.cpp  circle.hpp  common.hpp  context.hpp  csimplesocket  damage.hpp  debug_strategy.cpp  debug_strategy.hpp  golden_section.hpp  graph.cpp  graph.hpp  helpers.cpp  helpers.hpp  impl.hpp  line.hpp  master_strategy.cpp  master_strategy.hpp  math.hpp  (+45 more)
cpp-cgdk/debug/: output.hpp
cpp-cgdk/simulation/: minion_move.hpp  minion_strategy.cpp  minion_strategy.hpp  simulation_strategy.cpp  simulation_strategy.hpp  simulator.cpp  simulator.hpp
cpp-cgdk/simulation/scripts/: two_wizards_fight_near_bonus.cpp  two_wizards_fight_near_bonus.hpp
cpp-cgdk/tests/: action.cpp  circle.cpp  common.hpp  line.cpp  main.cpp  math.cpp  my_strategy.cpp  optimal_destination.cpp  optimal_movement.cpp  optimal_path.cpp  optimal_position.cpp  optimal_target.cpp  simulation.cpp  skills.cpp  target.cpp
python3-cgdk/: MyStrategy.py  RemoteProcessClient.py  model  strategy_barriers.py  strategy_common.py  strategy_debug.py  strategy_move.py  strategy_path.py  strategy_release.py  strategy_target.py
python3-cgdk/debug/: __init__.py  client.py
python3-cgdk/test/: common.py  test_my_strategy.py
python3-cgdk/test/strategy_barriers/: test_circular.py
python3-cgdk/test/strategy_common/: test_circle.py  test_lazy_init.py  test_line.py  test_normalize_angle.py  test_point.py
python3-cgdk/test/strategy_move/: common.py  test_get_shift_and_rotation.py  test_get_shift_and_turn.py  test_get_speed_and_turn_to_point.py  test_move_simulator.py  test_optimize_movement.py
python3-cgdk/test/strategy_path/: test_get_shortest_path.py  test_make_graph.py  test_select_destination.py
python3-cgdk/test/strategy_target/: test_get_optimal_position.py  test_get_target.py
python3-cgdk/test/strategy_test/: common.py  test_move_simulator.py  test_move_to.py  test_optimize_movement.py
repeater/: repeater.bat
